--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>  
     <head>  
-        <link href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope" rel="stylesheet">  
+        <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet"> 
         <title style="color: black;">Hello.</title>
         <style>
             body { 
@@ -20,7 +20,7 @@
         <body>
          <center>
              <br>
-            <h1 style="color: white;" style=font-family: 'Annie Use Your Telescope', cursive;>Raph</h1>
+            <h1 style="color: white;" style=font-family: 'Gloria Hallelujah', cursive;>Raph</h1>
             <br>
             <h3 style="color: white;"><strong>A R T ♦︎ G R A F F I T I ♦︎ P A R K O U R</strong></h3></h3>
             <br>
@@ -30,4 +30,3 @@
             <a href="https://twitter.com/raphgraff"><img class="full" src="twitter-xxl.png"></a>
             </body>
             </html>
-            
