--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <body>
          <center>
              <br>
-            <h1 style="color: white;" style=font-family: 'Gloria Hallelujah', cursive;>Raph</h1>
+            <h1 style="color: white;" style="font-family: 'Gloria Hallelujah', cursive;">Raph</h1>
             <br>
             <h3 style="color: white;"><strong>A R T ♦︎ G R A F F I T I ♦︎ P A R K O U R</strong></h3></h3>
             <br>
