--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>  
-    <head>  
-        <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet"> 
+    <centre>  
         <title style="color: black;">Hello.</title>
+        <head> 
+        <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet"> 
         <style>
             body { 
                 background-image: url(black.jpg);
@@ -20,7 +21,7 @@
         <body>
          <center>
              <br>
-            <h1 style="color: white;" style="font-family: 'Gloria Hallelujah', cursive;">Raph</h1>
+            <h1 style="color: white;" style=font-family: 'Gloria Hallelujah', cursive;>Raph</h1>
             <br>
             <h3 style="color: white;"><strong>A R T ♦︎ G R A F F I T I ♦︎ P A R K O U R</strong></h3></h3>
             <br>
