--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>  
     <centre>  
         <title style="color: black;">Hello.</title>
-        <head> 
-        <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet"> 
+        <head>
+            <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+            
+            
         <style>
             body { 
                 background-image: url(black.jpg);
@@ -23,7 +25,7 @@
              <br>
             <h1 style="color: white;" style=font-family: 'Gloria Hallelujah', cursive;>Raph</h1>
             <br>
-            <h3 style="color: white;"><strong>A R T ♦︎ G R A F F I T I ♦︎ P A R K O U R</strong></h3></h3>
+            <h3 style="color: white;"><strong>A R T ♦︎ G R A F F I T I ♦︎ P A R K O U R</strong></h3>
             <br>
             <a href="https://www.youtube.com/channel/UChYT05QgtBM-WazZv__gilg"><img class="full" src="yt.png"></a>
             <br>
