--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <centre>  
         <title style="color: black;">Hello.</title>
         <head>
-            <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" 
+                  rel="stylesheet"
+                  type="text/css">
             
             
         <style>
