--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
     <centre>  
         <title style="color: black;">Hello.</title>
         <head>
-            <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" 
-                  rel="stylesheet"
-                  type="text/css">
+            <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
             
             
         <style>
@@ -25,7 +23,7 @@
         <body>
          <center>
              <br>
-            <h1 style="color: white;" style=font-family: 'Gloria Hallelujah', cursive;>Raph</h1>
+            <h1 style="color: white;" style=font-family: 'Pacifico', cursive;>Raph</h1>
             <br>
             <h3 style="color: white;"><strong>A R T ♦︎ G R A F F I T I ♦︎ P A R K O U R</strong></h3>
             <br>
