--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
             <br>
             <br>
             <a href="https://twitter.com/raphgraff"><img class="full" src="twitter-xxl.png"></a>
+            <br>
+            <br>
+            <a href="http://steamcommunity.com/id/raphxd"><img class="full" src="steam.png"></a>
             </body>
             </html>
