--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
                 width: 5%;
                 height: auto;
             }
+            h1 {
+                font-family: Pacifico, cursive;
+            }
+           
 
             </style>
         </head>
         <body>
          <center>
              <br>
-            <h1 style="font-family: 'Pacifico', cursive;">Raph</h1>
+            <h1>Raph</h1>
             <br>
             <h3 style="color: white;"><strong>A R T ♦︎ G R A F F I T I ♦︎ P A R K O U R</strong></h3>
             <br>
