--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             }
             h1 {
                 font-family: Pacifico, cursive;
+                color: white;
+                
             }
            
 
