--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             }
             h1 {
                 font-family: Pacifico, cursive;
-                color: white;
+                color: "white";
                 
             }
            
