--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             h1 {
                 font-family: Pacifico, cursive;
                 color: "white";
-                font-size: 70
+                font-size: 70;
                 
             }
            
