--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
                 height: auto;
             }
             h1 {
+                font-size: 7
+            }
+            h1 {
                 font-family: Pacifico, cursive;
                 color: "white";
-                font-size: 70;
-                
             }
            
 
