--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 height: auto;
             }
             h1 {
-                font-size: "7";
+                font-size: 2.5em;
             }
             h1 {
                 font-family: Pacifico, cursive;
