--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             }
             h1 {
                 font-family: Pacifico, cursive;
-                color: white;
             }
            
 
@@ -28,7 +27,7 @@
         <body>
          <center>
              <br>
-            <h1>Raph</h1>
+             <h1><font color="red">Raph</font></h1>
             <br>
             <h3 style="color: white;"><strong>A R T ♦︎ G R A F F I T I ♦︎ P A R K O U R</strong></h3>
             <br>
