--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <body>
          <center>
              <br>
-             <h1><font color="red"><font size="7">Raph</font></font></h1>
+             <font size="7">
+             <h1><font color="red">Raph</font></h1>
             <br>
             <h3 style="color: white;"><strong>A R T ♦︎ G R A F F I T I ♦︎ P A R K O U R</strong></h3>
             <br>
