--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          <center>
              <br>
              <font size="7">
-             <h1><font color="red">Raph</font></h1>
+             <h1><font color="white">Raph</font></h1>
             <br>
             <h3 style="color: white;"><strong>A R T ♦︎ G R A F F I T I ♦︎ P A R K O U R</strong></h3>
             <br>
