--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <br>
             <h3 style="color: white;"><strong>A R T ♦︎ G R A F F I T I ♦︎ P A R K O U R</strong></h3>
             <br>
+             <font size="6",/font>
             <a href="https://www.youtube.com/channel/UChYT05QgtBM-WazZv__gilg"><img class="full" src="yt.png"></a>
             <br>
             <br>
