--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>  
     <centre>  
-        <title style="color: black;">Hello.</title>
+        <title style="color: black;">Raph.</title>
         <head>
             <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
             
