--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title style="color: black;">Raph.</title>
         <head>
             <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+           <audio>
             <source src="ride.mp3" type="audio/mpeg">
             
             
