--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             </style>
         </head>
         <body>
+            <audio controls>
+                <source src="horse.ogg" type="audio/ogg">
+                <source src="horse.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.</audio>
          <center>
              <br>
              <h1><font color="white">Raph</font></h1>
