--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
             </style>
         </head>
+        <center>
         <body>
             <audio controls>
                 <source src="horse.ogg" type="audio/ogg">
