--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
             </style>
         </head>
-        <center>
         <body>
+            <centre>
             <audio controls>
                 <source src="horse.ogg" type="audio/ogg">
                 <source src="horse.mp3" type="audio/mpeg">
@@ -38,6 +38,11 @@
             <br>
             <h3 style="color: white;"><strong>A R T ♦︎ G R A F F I T I ♦︎ P A R K O U R</strong></h3>
             <br>
+              <audio controls>
+                <source src="horse.ogg" type="audio/ogg">
+                <source src="horse.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.</audio>
+             <br>
              <font size="6",/font>
             <a href="https://www.youtube.com/channel/UChYT05QgtBM-WazZv__gilg"><img class="full" src="yt.png"></a>
             <br>
