--- a/index.html
+++ b/index.html
@@ -27,11 +27,6 @@
             </style>
         </head>
         <body>
-            <centre>
-            <audio controls>
-                <source src="horse.ogg" type="audio/ogg">
-                <source src="horse.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.</audio>
          <center>
              <br>
              <h1><font color="white">Raph</font></h1>
@@ -39,8 +34,7 @@
             <h3 style="color: white;"><strong>A R T ♦︎ G R A F F I T I ♦︎ P A R K O U R</strong></h3>
             <br>
               <audio controls>
-                <source src="horse.ogg" type="audio/ogg">
-                <source src="horse.mp3" type="audio/mpeg">
+                <source src="ride.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.</audio>
              <br>
              <font size="6",/font>
