--- a/index.html
+++ b/index.html
@@ -88,5 +88,11 @@
             <a href="http://steamcommunity.com/id/raphxd"><img class="full" src="steam.png"></a>
             <br>
             <br>
+		     <br>
+		     <br>
+		     <br>
+		     <h5>Made By Raph 2017<h5>
+		     
+			 
             </body>
             </html>
