--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
              <br>
              <br>
              <font size="6",/font>
-            <a href="https://www.youtube.com/channel/UChYT05QgtBM-WazZv__gilg"><img class="full" src="yt.png"></a>
+            <a href="https://www.youtube.com/channel/UChYT05QgtBM-WazZv__gilg"><img class="full" src="https://www.youtube.com/yt/brand/media/image/YouTube_light_color_icon.png"></a>
             <br>
             <br>
             <a href="https://twitter.com/raphgraff"><img class="full" src="twitter-xxl.png"></a>
