--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <doctype html>
     <html>
+        <title>Raph.</title>
         <head>
             <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
             <div id="snow">
